# summarizer-webpage

./: .gitignore  LICENSE  README.md  llm_summ_r_and_d.ipynb  pyproject.toml
.virtual_documents/: Untitled.ipynb  tbi_r_and_d.ipynb
llm_app/: __init__.py  db.py  schema.sql  summarizer.py
llm_app/static/: style.css
llm_app/templates/: form.html
tests/: test_app.py
